# amethyst_egui

./: Cargo.toml  README.md  README.tpl  compile_shaders.sh  keys.py
examples/: hello_world.rs
examples/config/: display.ron
shaders/compiled/: egui.frag.spv  egui.vert.spv
shaders/src/: egui.frag  egui.vert
shaders/src/header/: math.frag
src/: bundle.rs  lib.rs  pass.rs  plugin.rs  pod.rs  system.rs
