[package]
name = "amethyst_egui"
version = "0.1.0"
edition = "2018"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
license = "MIT"

[dependencies]
amethyst_assets = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
amethyst_rendy = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
amethyst_core = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
amethyst_error = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
amethyst_window = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
amethyst_input = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }
derivative = "2.2"
glsl-layout = "0.4"
lazy_static = "1.4"
log = "0.4"
winit = "0.25"
webbrowser = { version = "0.5", optional = true }
tts = { version = "0.17", optional = true }
clipboard = { version = "0.5", optional = true }

[dependencies.egui]
version = "0.13"
git = "https://github.com/emilk/egui.git"

[dev-dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", version = "0.16.0" }

[features]
default = []
full = ["webbrowser", "tts", "clipboard"]
